--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "engineStrict": true,
     "license": "Apache-2.0",
     "dependencies": {
+        "fabric-contract-api": "^2.1.2",
         "fabric-shim": "^2.1.2"
     }
 }
